--- a/src/main/resources/views/PaneTop.fxml
+++ b/src/main/resources/views/PaneTop.fxml
@@ -17,7 +17,7 @@
 
 <AnchorPane prefHeight="875.0" prefWidth="1340.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.PaneTopController">
    <children>
-      <VBox layoutX="-2.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="875.0" prefWidth="1338.0" style="-fx-background-color: #E9E9E9;">
+      <VBox layoutX="-2.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="875.0" prefWidth="1340.0" style="-fx-background-color: #E9E9E9;">
          <children>
             <Pane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-color: #292929; -fx-background-radius: 8;">
                <VBox.margin>
@@ -46,7 +46,7 @@
                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                           </rowConstraints>
                            <children>
-                              <ImageView fx:id="imgPoster1" fitHeight="220.0" fitWidth="150.0" onMouseEntered="#onMouseEnteredTitle" pickOnBounds="true" preserveRatio="true" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS">
+                              <ImageView fx:id="imgObra00" fitHeight="220.0" fitWidth="150.0" onMouseEntered="#onMouseEnteredTitle" pickOnBounds="true" preserveRatio="true" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS">
                                  <image>
                                     <Image url="@../images/examples/ejemploPosterPelicula.jpg" />
                                  </image>
@@ -54,37 +54,37 @@
                                     <Insets />
                                  </GridPane.margin>
                               </ImageView>
-                              <ImageView fx:id="imgPoster2" fitHeight="220.0" fitWidth="150.0" onMouseEntered="#onMouseEnteredTitle" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS">
+                              <ImageView fx:id="imgObra01" fitHeight="220.0" fitWidth="150.0" onMouseEntered="#onMouseEnteredTitle" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS">
                                  <image>
                                     <Image url="@../images/examples/ejemploPosterPelicula.jpg" />
                                  </image>
                               </ImageView>
-                              <ImageView fx:id="imgPoster3" fitHeight="220.0" fitWidth="150.0" onMouseEntered="#onMouseEnteredTitle" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS">
+                              <ImageView fx:id="imgObra02" fitHeight="220.0" fitWidth="150.0" onMouseEntered="#onMouseEnteredTitle" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS">
                                  <image>
                                     <Image url="@../images/examples/ejemploPosterPelicula.jpg" />
                                  </image>
                               </ImageView>
-                              <ImageView fx:id="imgPoster4" fitHeight="220.0" fitWidth="150.0" onMouseEntered="#onMouseEnteredTitle" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS">
+                              <ImageView fx:id="imgObra03" fitHeight="220.0" fitWidth="150.0" onMouseEntered="#onMouseEnteredTitle" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS">
                                  <image>
                                     <Image url="@../images/examples/ejemploPosterPelicula.jpg" />
                                  </image>
                               </ImageView>
-                              <ImageView fx:id="imgPoster5" fitHeight="220.0" fitWidth="150.0" onMouseEntered="#onMouseEnteredTitle" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="4" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS">
+                              <ImageView fx:id="imgObra04" fitHeight="220.0" fitWidth="150.0" onMouseEntered="#onMouseEnteredTitle" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="4" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS">
                                  <image>
                                     <Image url="@../images/examples/ejemploPosterPelicula.jpg" />
                                  </image>
                               </ImageView>
-                              <ImageView fx:id="imgPoster6" fitHeight="220.0" fitWidth="150.0" onMouseEntered="#onMouseEnteredTitle" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="5" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS">
+                              <ImageView fx:id="imgObra05" fitHeight="220.0" fitWidth="150.0" onMouseEntered="#onMouseEnteredTitle" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="5" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS">
                                  <image>
                                     <Image url="@../images/examples/ejemploPosterPelicula.jpg" />
                                  </image>
                               </ImageView>
-                              <ImageView fx:id="imgPoster7" fitHeight="220.0" fitWidth="150.0" onMouseEntered="#onMouseEnteredTitle" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="6" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS">
+                              <ImageView fx:id="imgObra06" fitHeight="220.0" fitWidth="150.0" onMouseEntered="#onMouseEnteredTitle" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="6" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS">
                                  <image>
                                     <Image url="@../images/examples/ejemploPosterPelicula.jpg" />
                                  </image>
                               </ImageView>
-                              <ImageView fx:id="imgPoster8" fitHeight="220.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="7" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS">
+                              <ImageView fx:id="imgObra07" fitHeight="220.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="7" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS">
                                  <image>
                                     <Image url="@../images/examples/ejemploPosterPelicula.jpg" />
                                  </image>
